--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,6 @@
   height: 34px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #0f2431eb;
   display: flex;
@@ -30,39 +24,19 @@
   }
 }
 
-.notActiveLink, .activeLink {
-  text-decoration: none;
-  display: flex;
-  color: white;
-}
-
-.notActiveLink {
-  font-weight: normal;
-}
-
-.activeLink {
-  font-weight: bold;
-}
-
-.MuiPaper-root {
-  background-color: #2a4251 !important;
-  box-shadow: 1px 1px 2px #bababa, inset 0 0 1px #ffffff !important;
-  /*overflow: visible !important;*/
-}
-
-#movie_player {
-  padding-top: 56.25% !important;
-  position: relative;
-}
-
 .MuiPaper-root:hover {
-  box-shadow: 3px 3px 4px #bababa, inset 0 0 1px #ffffff !important;
-}
-
-.MuiCardHeader-subheader {
-  color: rgba(255, 253, 253, 0.54) !important;
+  box-shadow: 7px 7px 7px 0px rgba(0,0,0,0.90) !important
 }
 
 .MuiBreadcrumbs-li:hover {
   text-decoration: underline;
+}
+
+.MuiCardHeader-title {
+  line-height: 1.2 !important;
+}
+
+.MuiPaper-root, .MuiTypography-root {
+  font-family: 'Acme', sans-serif !important;
+  word-spacing: 3px;
 }
